@@ -282,6 +282,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5583: Added optional Extensions in Distutils. Initial patch by Georg
+  Brandl.
+
 - Issue #1222: locale.format() bug when the thousands separator is a space
   character.
 
